--- a/evaluacion_APBD_InmaPerea.ipynb
+++ b/evaluacion_APBD_InmaPerea.ipynb
@@ -2552,6 +2552,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **SaleType**: Tipo de venta (tipo de contrato, intereses, garantías, etc.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 211,
    "metadata": {
@@ -2715,6 +2722,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Functional**: Mide el grado de funcionalidad de la vivienda (asume siempre la categoría típica a menos que se justifique que carece de alguna característica)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 133,
    "metadata": {
@@ -2739,6 +2753,187 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "miss_functional = full.filter(full.Functional.isNull())\n",
+    "no_miss_functional = full.filter(full.Functional.isNotNull())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculemos la clase mayoritaria:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2717, 'Typ'),\n",
+       " (70, 'Min2'),\n",
+       " (65, 'Min1'),\n",
+       " (35, 'Mod'),\n",
+       " (19, 'Maj1'),\n",
+       " (9, 'Maj2'),\n",
+       " (2, 'Sev')]"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "functional_cat_dict={row.Functional : row['count'] for row in no_miss_functional.groupby('Functional').count().collect()}\n",
+    "functional_cat_dict=sorted([(v,k) for (k,v) in functional_cat_dict.items()], reverse=True)\n",
+    "functional_cat_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La clase mayoritaria es *Typ*.\n",
+    "Esta variable puede estar relacionada con muchas otras, porque es bastante genérica, dado que son solo 2 valores perdidos vamos a inspeccionar todas las variables y veamos si la vivienda en cuestión carece de alguna de funcionalidad, y si no es así le asignaremos la clase mayoritaria *Typ*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+--------+-----------+-------+------+--------+\n",
+      "|  Id|MSSubClass|MSZoning|LotFrontage|LotArea|Street|   Alley|\n",
+      "+----+----------+--------+-----------+-------+------+--------+\n",
+      "|2217|        20|    null|         80|  14584|  Pave|noAccess|\n",
+      "|2474|        50|      RM|         60|  10320|  Pave|    Grvl|\n",
+      "+----+----------+--------+-----------+-------+------+--------+\n",
+      "\n",
+      "+--------+-----------+---------+---------+---------+------------+----------+\n",
+      "|LotShape|LandContour|Utilities|LotConfig|LandSlope|Neighborhood|Condition1|\n",
+      "+--------+-----------+---------+---------+---------+------------+----------+\n",
+      "|     Reg|        Low|   AllPub|   Inside|      Mod|      IDOTRR|      Norm|\n",
+      "|     Reg|        Lvl|   AllPub|   Corner|      Gtl|      IDOTRR|    Artery|\n",
+      "+--------+-----------+---------+---------+---------+------------+----------+\n",
+      "\n",
+      "+----------+--------+----------+-----------+-----------+---------+------------+\n",
+      "|Condition2|BldgType|HouseStyle|OverallQual|OverallCond|YearBuilt|YearRemodAdd|\n",
+      "+----------+--------+----------+-----------+-----------+---------+------------+\n",
+      "|      Norm|    1Fam|    1Story|          1|          5|     1952|        1952|\n",
+      "|      Norm|    1Fam|    1.5Fin|          4|          1|     1910|        1950|\n",
+      "+----------+--------+----------+-----------+-----------+---------+------------+\n",
+      "\n",
+      "+---------+--------+-----------+-----------+----------+----------+---------+\n",
+      "|RoofStyle|RoofMatl|Exterior1st|Exterior2nd|MasVnrType|MasVnrArea|ExterQual|\n",
+      "+---------+--------+-----------+-----------+----------+----------+---------+\n",
+      "|    Gable| CompShg|    AsbShng|    VinylSd|      None|         0|       Fa|\n",
+      "|    Gable| CompShg|    Wd Sdng|    Wd Sdng|      None|         0|       Fa|\n",
+      "+---------+--------+-----------+-----------+----------+----------+---------+\n",
+      "\n",
+      "+---------+----------+----------+----------+------------+------------+----------+\n",
+      "|ExterCond|Foundation|  BsmtQual|  BsmtCond|BsmtExposure|BsmtFinType1|BsmtFinSF1|\n",
+      "+---------+----------+----------+----------+------------+------------+----------+\n",
+      "|       Po|      Slab|NoBasement|NoBasement|  NoBasement|  NoBasement|         0|\n",
+      "|       Fa|    CBlock|        TA|        Fa|          No|         Unf|         0|\n",
+      "+---------+----------+----------+----------+------------+------------+----------+\n",
+      "\n",
+      "+------------+----------+---------+-----------+-------+---------+----------+\n",
+      "|BsmtFinType2|BsmtFinSF2|BsmtUnfSF|TotalBsmtSF|Heating|HeatingQC|CentralAir|\n",
+      "+------------+----------+---------+-----------+-------+---------+----------+\n",
+      "|  NoBasement|         0|        0|          0|   Wall|       Po|         N|\n",
+      "|         Unf|         0|      771|        771|   GasA|       Fa|         Y|\n",
+      "+------------+----------+---------+-----------+-------+---------+----------+\n",
+      "\n",
+      "+----------+--------+--------+------------+---------+------------+------------+\n",
+      "|Electrical|1stFlrSF|2ndFlrSF|LowQualFinSF|GrLivArea|BsmtFullBath|BsmtHalfBath|\n",
+      "+----------+--------+--------+------------+---------+------------+------------+\n",
+      "|     FuseA|     733|       0|           0|      733|           0|           0|\n",
+      "|     SBrkr|     866|     504|         114|     1484|           0|           0|\n",
+      "+----------+--------+--------+------------+---------+------------+------------+\n",
+      "\n",
+      "+--------+--------+------------+------------+-----------+------------+----------+\n",
+      "|FullBath|HalfBath|BedroomAbvGr|KitchenAbvGr|KitchenQual|TotRmsAbvGrd|Functional|\n",
+      "+--------+--------+------------+------------+-----------+------------+----------+\n",
+      "|       1|       0|           2|           1|         Fa|           4|      null|\n",
+      "|       2|       0|           3|           1|         TA|           6|      null|\n",
+      "+--------+--------+------------+------------+-----------+------------+----------+\n",
+      "\n",
+      "+----------+-----------+----------+-----------+------------+----------+----------+\n",
+      "|Fireplaces|FireplaceQu|GarageType|GarageYrBlt|GarageFinish|GarageCars|GarageArea|\n",
+      "+----------+-----------+----------+-----------+------------+----------+----------+\n",
+      "|         0|NoFireplace|    Attchd|       1952|         Unf|         2|       487|\n",
+      "|         0|NoFireplace|    Detchd|       1910|         Unf|         1|       264|\n",
+      "+----------+-----------+----------+-----------+------------+----------+----------+\n",
+      "\n",
+      "+----------+----------+----------+----------+-----------+-------------+---------+\n",
+      "|GarageQual|GarageCond|PavedDrive|WoodDeckSF|OpenPorchSF|EnclosedPorch|3SsnPorch|\n",
+      "+----------+----------+----------+----------+-----------+-------------+---------+\n",
+      "|        Fa|        Po|         N|         0|          0|            0|        0|\n",
+      "|        TA|        Fa|         N|        14|        211|            0|        0|\n",
+      "+----------+----------+----------+----------+-----------+-------------+---------+\n",
+      "\n",
+      "+-----------+--------+------+-------+-----------+-------+------+\n",
+      "|ScreenPorch|PoolArea|PoolQC|  Fence|MiscFeature|MiscVal|MoSold|\n",
+      "+-----------+--------+------+-------+-----------+-------+------+\n",
+      "|          0|       0|NoPool|NoFence|       None|      0|     2|\n",
+      "|         84|       0|NoPool|NoFence|       None|      0|     9|\n",
+      "+-----------+--------+------+-------+-----------+-------+------+\n",
+      "\n",
+      "+------+--------+-------------+---------+\n",
+      "|YrSold|SaleType|SaleCondition|SalePrice|\n",
+      "+------+--------+-------------+---------+\n",
+      "|  2008|      WD|      Abnorml|     null|\n",
+      "|  2007|     COD|      Abnorml|     null|\n",
+      "+------+--------+-------------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "step=7\n",
+    "for index in range(0, num_columns, step):\n",
+    "    miss_functional.select(cols[index:index+step]).show(5) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las viviendas disponen de las características mínimas, tienen dormitorios, cocina, todos los suministros, instalación electrica, baños, etc. No dispone de características extra como piscina, sótano, garage, valla, etc.\n",
+    "\n",
+    "Por tanto, asignaremos la clase mayoritaria *Typ*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "imputation_dict['Functional']='Typ'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2746,8 +2941,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Utilities**: Tipo de suministros disponibles (agua, luz, gas, etc.)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
@@ -2770,6 +2972,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "miss_utilities = full.filter(full.Utilities.isNull())\n",
+    "no_miss_utilities = full.filter(full.Utilities.isNotNull())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculamos la clase mayoritaria para *Utilities*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2916, 'AllPub'), (1, 'NoSeWa')]"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utilities_cat_dict={row.Utilities : row['count'] for row in no_miss_utilities.groupby('Utilities').count().collect()}\n",
+    "utilities_cat_dict=sorted([(v,k) for (k,v) in utilities_cat_dict.items()], reverse=True)\n",
+    "utilities_cat_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso vamos a asignar la clase mayoritaria para imputar, ya que claramente es la única clase existente en los datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "imputation_dict['Utilities']='AllPub'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2777,8 +3040,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **MSZoning**: Identifica la clasificación de la vivienda según la zona en la que está ubicada (agrícola, comercial, residencial, industrial, etc.)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 230,
    "metadata": {
     "collapsed": false
    },
@@ -2801,10 +3071,142 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "miss_zoning = full.filter(full.MSZoning.isNull())\n",
+    "no_miss_zoning = full.filter(full.MSZoning.isNotNull())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2265, 'RL'), (460, 'RM'), (139, 'FV'), (26, 'RH'), (25, 'C (all)')]"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zoning_cat_dict={row.MSZoning : row['count'] for row in no_miss_zoning.groupby('MSZoning').count().collect()}\n",
+    "zoning_cat_dict=sorted([(v,k) for (k,v) in zoning_cat_dict.items()], reverse=True)\n",
+    "zoning_cat_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La clase mayoritaria es *RL*, es decir, zona residencial de baja densidad.\n",
+    "\n",
+    "Las variable que más informacíon nos podría dar para encontrar el mejor valor para los valores perdidos de la variable *MSZoning* es *Neighborhood*, por tanto veamos el vecindario al que pertenecen las viviendas que presentan valores perdidos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+\n",
+      "|Neighborhood|\n",
+      "+------------+\n",
+      "|      IDOTRR|\n",
+      "|      IDOTRR|\n",
+      "|      IDOTRR|\n",
+      "|     Mitchel|\n",
+      "+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "miss_zoning.select(['Neighborhood']).show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vemos que las viviendas están ubicadas en el barrio *IDOTRR* o *Mitchel*, a continuación calculemos cuál es la calificación del suelo para estos barrios y le asignaremos esa categoría a los valores perdidos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+\n",
+      "|MSZoning|count|\n",
+      "+--------+-----+\n",
+      "| C (all)|   22|\n",
+      "|      RL|  104|\n",
+      "|      RM|   77|\n",
+      "+--------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_miss_zoning.filter((no_miss_zoning.Neighborhood=='IDOTRR') | \n",
+    "                      (no_miss_zoning.Neighborhood=='Mitchel')).groupBy('MSZoning').count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imputaremos el valor *RL*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "imputation_dict['MSZoning']='RL'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Variables missing *MasVnr*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **MasVnrType**: Tipo de revestimiento (ladrillo, ladrillo visto, piedra, etc.)\n",
+    "* **MasVnrArea**: superficie de revestimiento (ft2)"
    ]
   },
   {
@@ -2833,10 +3235,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "miss_masvnr = full.filter(full.MasVnrType.isNull() | full.MasVnrArea.isNull() )\n",
+    "no_miss_masvnr = full.filter(full.MasVnrType.isNotNull() & full.MasVnrArea.isNotNull())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculamos la clase mayoritaria para la variable *MasVnrType*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1742, 'None'), (879, 'BrkFace'), (249, 'Stone'), (25, 'BrkCmn')]"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "masvnr_cat_dict={row.MasVnrType : row['count'] for row in no_miss_masvnr.groupby('MasVnrType').count().collect()}\n",
+    "masvnr_cat_dict=sorted([(v,k) for (k,v) in masvnr_cat_dict.items()], reverse=True)\n",
+    "masvnr_cat_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La clase mayoritaria es *None*."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Variable missing *LotFrontage*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **LotFrontage**: longitud de la calle en la que se encuentra la propiedad"
    ]
   },
   {
@@ -2861,6 +3320,13 @@
     "for i in range(len(missings)):\n",
     "    if 'LotFrontage' in missings[i][1]:\n",
     "        print(missings[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta variable presenta un alto porcentaje de valores perdidos (16,65%), por tanto, vamos a eliminarla del estudio, porque imputar tantos valores podría introducir error o sesgar los resultados."
    ]
   },
   {
