limpieza de missing completada

--- a/evaluacion_APBD_InmaPerea.ipynb
+++ b/evaluacion_APBD_InmaPerea.ipynb
@@ -3281,7 +3281,191 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La clase mayoritaria es *None*."
+    "La clase mayoritaria es *None*.\n",
+    "\n",
+    "Veamos los valores que toman las variables que podrían estar relacionadas con *MasVnrArea* y *MasVnrType* para las observaciones missing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+------------+-----------+-----------+---------+-----------+-----------+---------+---------+----------+----------+\n",
+      "|MSSubClass|Neighborhood|OverallQual|OverallCond|YearBuilt|Exterior1st|Exterior2nd|ExterQual|ExterCond|MasVnrType|MasVnrArea|\n",
+      "+----------+------------+-----------+-----------+---------+-----------+-----------+---------+---------+----------+----------+\n",
+      "|        60|     Gilbert|          6|          5|     2002|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        20|     Crawfor|          6|          3|     1957|    Wd Sdng|      Stone|       Gd|       TA|      null|      null|\n",
+      "|        60|     Somerst|          7|          6|     2007|    CemntBd|    CmentBd|       Gd|       TA|      null|      null|\n",
+      "|        20|     SawyerW|          7|          5|     2003|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        20|     Somerst|          7|          5|     2007|    CemntBd|    CmentBd|       Gd|       TA|      null|      null|\n",
+      "|       120|     Somerst|          7|          5|     2006|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        20|     NridgHt|         10|          5|     2006|    VinylSd|    VinylSd|       Ex|       TA|      null|      null|\n",
+      "|        60|     CollgCr|          8|          5|     2002|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        60|     Gilbert|          8|          5|     2002|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        20|     Somerst|          7|          5|     2008|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        60|     CollgCr|          7|          5|     2002|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        60|     Gilbert|          7|          5|     2002|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        20|     Somerst|          8|          5|     2006|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        60|     Somerst|          7|          5|     2002|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        60|     Gilbert|          6|          5|     2007|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        80|     Gilbert|          7|          5|     2003|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        20|     Somerst|          7|          5|     2007|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        60|     Somerst|          8|          5|     2007|    WdShing|    Wd Shng|       Gd|       TA|      null|      null|\n",
+      "|       120|     Somerst|          8|          5|     2006|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        20|      Timber|          8|          5|     2006|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        20|     Mitchel|          4|          3|     1961|    Plywood|    Plywood|       TA|       TA|      null|       198|\n",
+      "|        60|     NridgHt|          8|          5|     2005|    CemntBd|    CmentBd|       Gd|       TA|      null|      null|\n",
+      "|        20|     Somerst|          8|          5|     2006|    VinylSd|    VinylSd|       Gd|       TA|      null|      null|\n",
+      "|        20|     Edwards|          6|          5|     2002|    VinylSd|    VinylSd|       TA|       TA|      null|      null|\n",
+      "+----------+------------+-----------+-----------+---------+-----------+-----------+---------+---------+----------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "miss_masvnr.select(['MSSubClass',\n",
+    "                    'Neighborhood',\n",
+    "                    'OverallQual',\n",
+    "                    'OverallCond',\n",
+    "                    'YearBuilt',\n",
+    "                    'Exterior1st',\n",
+    "                    'Exterior2nd',\n",
+    "                    'ExterQual',\n",
+    "                    'ExterCond',\n",
+    "                    'MasVnrType',\n",
+    "                    'MasVnrArea']).show(25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a buscar los registros similares en el dataframe sin valores perdidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----+\n",
+      "|MasVnrType|count|\n",
+      "+----------+-----+\n",
+      "|      None|  151|\n",
+      "|     Stone|   49|\n",
+      "|   BrkFace|  125|\n",
+      "+----------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_miss_masvnr.select(['MSSubClass', 'Neighborhood', 'OverallQual', 'OverallCond', 'YearBuilt',\n",
+    "                       'Exterior1st', 'Exterior2nd', 'ExterQual', 'ExterCond', 'MasVnrType', 'MasVnrArea'])\\\n",
+    "                .filter((no_miss_masvnr.ExterCond=='TA') &\n",
+    "                        (no_miss_masvnr.ExterQual=='Gd') &\n",
+    "                        (no_miss_masvnr.Exterior2nd=='VinylSd') &\n",
+    "                        (no_miss_masvnr.Exterior1st=='VinylSd') &\n",
+    "                        ((no_miss_masvnr.YearBuilt>=1957) & (no_miss_masvnr.YearBuilt<=2007)) &\n",
+    "                        (no_miss_masvnr.OverallCond==5) &\n",
+    "                        (no_miss_masvnr.OverallQual>=6) & \n",
+    "                        (no_miss_masvnr.OverallQual<=8) &\n",
+    "                        ((no_miss_masvnr.Neighborhood=='Gilbert') | (no_miss_masvnr.Neighborhood=='Crawfor') | \n",
+    "                         (no_miss_masvnr.Neighborhood=='Somerst') | (no_miss_masvnr.Neighborhood=='NridgHt') | \n",
+    "                         (no_miss_masvnr.Neighborhood=='CollgCr')) &\n",
+    "                        ((no_miss_masvnr.MSSubClass==60) | (no_miss_masvnr.MSSubClass==20))).groupBy('MasVnrType').count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La mayoria de las observaciones similares tiene como categoría mayoritaria *None*, por tanto utilizaremos este valor para imputar *MasVnrType*. Veamos qué valor damos a *MasVnrArea*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------+\n",
+      "|MasVnrType|MasVnrArea|\n",
+      "+----------+----------+\n",
+      "|      None|         0|\n",
+      "|      None|         0|\n",
+      "|      None|         0|\n",
+      "|      None|         0|\n",
+      "|      None|         0|\n",
+      "+----------+----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_miss_masvnr.select(['MasVnrType', 'MasVnrArea']).filter(no_miss_masvnr.MasVnrType=='None').show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----+\n",
+      "|MasVnrType|count|\n",
+      "+----------+-----+\n",
+      "|      None| 1742|\n",
+      "+----------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_miss_masvnr.select(['MasVnrType', 'MasVnrArea']).filter(no_miss_masvnr.MasVnrType=='None').groupBy('MasVnrType').count().show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Todas las observaciones con valor *MasVnrType* igual a *None*, les corresponde un valor de *MasVnrArea* igual a 0, por tanto imputaremos los siguientes valores:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "imputation_dict['MasVnrType']='None'\n",
+    "imputation_dict['MasVnrArea']=0"
    ]
   },
   {
@@ -3300,7 +3484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 263,
    "metadata": {
     "collapsed": false
    },
@@ -3345,7 +3529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 264,
    "metadata": {
     "collapsed": true
    },
@@ -3355,14 +3539,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los valores por los que imputamos cada una de las variables missing a continuación"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Alley': 'noAccess',\n",
+       " 'BsmtCond': 'NoBasement',\n",
+       " 'BsmtExposure': 'NoBasement',\n",
+       " 'BsmtFinSF1': 0,\n",
+       " 'BsmtFinSF2': 0,\n",
+       " 'BsmtFinType1': 'NoBasement',\n",
+       " 'BsmtFinType2': 'NoBasement',\n",
+       " 'BsmtFullBath': 0,\n",
+       " 'BsmtHalfBath': 0,\n",
+       " 'BsmtQual': 'NoBasement',\n",
+       " 'BsmtUnfSF': 0,\n",
+       " 'Electrical': 'SBrkr',\n",
+       " 'Exterior1st': 'Wd Sdng',\n",
+       " 'Exterior2nd': 'Plywood',\n",
+       " 'Fence': 'NoFence',\n",
+       " 'FireplaceQu': 'NoFireplace',\n",
+       " 'Functional': 'Typ',\n",
+       " 'GarageArea': 0,\n",
+       " 'GarageCars': 0,\n",
+       " 'GarageCond': 'NoGarage',\n",
+       " 'GarageFinish': 'NoGarage',\n",
+       " 'GarageQual': 'NoGarage',\n",
+       " 'GarageType': 'NoGarage',\n",
+       " 'GarageYrBlt': 0,\n",
+       " 'KitchenQual': 'TA',\n",
+       " 'MSZoning': 'RL',\n",
+       " 'MasVnrArea': 0,\n",
+       " 'MasVnrType': 'None',\n",
+       " 'MiscFeature': 'None',\n",
+       " 'PoolQC': 'NoPool',\n",
+       " 'SaleType': 'WD',\n",
+       " 'TotalBsmtSF': 0,\n",
+       " 'Utilities': 'AllPub'}"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputation_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este punto nos olvidaremos del conjunto test, sólo lo retomaremos para calcular las predicciones que subiremos a Kaggle. Imputaremos los valores perdidos en el conjunto train, utilizando la función *fillna* y el diccionario que hemos construido en los apartados anteriores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "imputed_df=train.fillna(imputation_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación borraremos la variable *LotFrontage* del dataframe de entrenamiento, tal y como vimos el porcentaje de valores perdidos es muy elevado, y hemos tomado la decisión de prescindir de dicha variable para nuestro estudio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "imputed_df2 = imputed_df.drop('LotFrontage')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por último comprobamos que en el conjunto train ya no existen valores perdidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted([(v, k) for k, v in imputed_df2.agg(*[count_nulls(c) for c in imputed_df2.columns]).first().asDict().items() if v > 0], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a guardar nuestro dataset train ya limpio de valores perdidos en un fichero csv para poder usarlo en cualquier momento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "path = 'data/output/imputed_df_csv'\n",
+    "imputed_df2.write.csv(path, header=True, mode='overwrite')"
    ]
   },
   {
