--- a/evaluacion_APBD_InmaPerea.ipynb
+++ b/evaluacion_APBD_InmaPerea.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -87,10 +87,10 @@
     {
      "data": {
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0xb65dd46c50>"
+       "<pyspark.sql.session.SparkSession at 0xb36c76d668>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -164,15 +164,88 @@
     "from pyspark.sql.functions import lit, col, count, sum as agg_sum\n",
     "from pyspark.sql.functions import expr, udf, regexp_extract\n",
     "from pyspark.sql.functions import desc, avg, round as col_round\n",
-    "\n",
+    "from pyspark.sql.functions import log1p\n",
     "\n",
     "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.evaluation import Evaluator\n",
     "from pyspark.ml.feature import StringIndexer, IndexToString, VectorAssembler\n",
     "from pyspark.ml.feature import StandardScaler\n",
     "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "\n",
+    "from math import sqrt\n",
+    "from operator import add\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def count_nulls(c):\n",
+    "    return agg_sum(col(c).isNull().cast(IntegerType())).alias(c)\n",
+    "\n",
+    "\n",
+    "def plot_freqs(categories, values, max_y):\n",
+    "    %matplotlib inline\n",
+    "    plt.bar(range(len(categories)), values, align='center')\n",
+    "    plt.xticks(range(len(categories)), categories)\n",
+    "    plt.ylim([0, max_y])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Código original tomado de:\n",
+    "https://gist.github.com/pvalienteverde\n",
+    "\n",
+    "- Se ha añadido la fórmula rmsle para que trabaje con la API DataFrames.\n",
+    "'''\n",
+    "\n",
+    "from pyspark.ml.evaluation import Evaluator\n",
+    "from math import sqrt\n",
+    "from operator import add\n",
+    "from pyspark.sql.functions import avg\n",
+    "from pyspark.sql.functions import log1p\n",
+    "\n",
+    "class MyEvaluator(Evaluator):\n",
+    "    '''\n",
+    "    When a userID is predicted when it is not already trained (all userID  data is used on validation \n",
+    "    group and none of them to train), prediction is nan,  so RegressionEvaluator returns Nan.\n",
+    "    To solve this we must change RegressionEvaluator by MiValidacion\n",
+    "    '''\n",
+    "    def __init__(self,predictionCol='prediction', targetCol='rating'):        \n",
+    "        super(MyEvaluator, self).__init__()\n",
+    "        self.predictionCol=predictionCol\n",
+    "        self.targetCol=targetCol\n",
+    "        \n",
+    "    def _evaluate(self, dataset):       \n",
+    "        error=self.rmse(dataset,self.predictionCol,self.targetCol)\n",
+    "        print (\"Error: {}\".format(error))\n",
+    "        return error\n",
+    "    \n",
+    "    def isLargerBetter(self):\n",
+    "        return False\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def rmse(dataset, predictionCol, targetCol):\n",
+    "        return sqrt(dataset.select(avg((dataset[targetCol] - dataset[predictionCol]) ** 2)).first()[0])\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def rmsle(dataset, predictionCol, targetCol):\n",
+    "        return sqrt(dataset.select(avg((log1p(dataset[targetCol]) - log1p(dataset[predictionCol])) ** 2)).first()[0])             "
    ]
   },
   {
@@ -907,9 +980,6 @@
     }
    ],
    "source": [
-    "def count_nulls(c):\n",
-    "    return agg_sum(col(c).isNull().cast(IntegerType())).alias(c)\n",
-    "\n",
     "exprs = [count_nulls(c) for c in full.columns]\n",
     "\n",
     "count_NA = full.agg(*exprs).first().asDict()\n",
@@ -1533,19 +1603,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "#import matplotlib.pyplot as plt\n",
     "\n",
-    "def plot_freqs(categories, values, max_y):\n",
-    "    %matplotlib inline\n",
-    "    plt.bar(range(len(categories)), values, align='center')\n",
-    "    plt.xticks(range(len(categories)), categories)\n",
-    "    plt.ylim([0, max_y])"
+    "#def plot_freqs(categories, values, max_y):\n",
+    "   #   %matplotlib inline\n",
+    "   #  plt.bar(range(len(categories)), values, align='center')\n",
+    "   # plt.xticks(range(len(categories)), categories)\n",
+    "   # plt.ylim([0, max_y])"
    ]
   },
   {
@@ -1774,6 +1844,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculamos la categoría mayoritaria en la variable *Exterior1st*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 193,
    "metadata": {
@@ -1809,6 +1886,13 @@
     "exterior1_cat_dict={row.Exterior1st : row['count'] for row in no_miss_exterior.groupby('Exterior1st').count().collect()}\n",
     "exterior1_cat_dict=sorted([(v,k) for (k,v) in exterior1_cat_dict.items()], reverse=True)\n",
     "exterior1_cat_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculamos la categoría mayoritaria en la variable *Exterior2nd*"
    ]
   },
   {
@@ -3696,9 +3780,258 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En primer lugar recuperamos el conjunto de datos ya limpio de missings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "path = 'data/output/imputed_df_csv'\n",
+    "imputed_train_data = spark.read.csv(path, header=True, inferSchema=True).cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"numerico\"></a>\n",
     "\n",
     "## 5.2 Conversión a tipo numérico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para construir modelos es necesario convertir a numéricas las variables.\n",
+    "\n",
+    "Vamos a usar *StringIndexer* para automatizar el proceso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Id: integer (nullable = true)\n",
+      " |-- MSSubClass: integer (nullable = true)\n",
+      " |-- MSZoning: string (nullable = true)\n",
+      " |-- LotArea: integer (nullable = true)\n",
+      " |-- Street: string (nullable = true)\n",
+      " |-- Alley: string (nullable = true)\n",
+      " |-- LotShape: string (nullable = true)\n",
+      " |-- LandContour: string (nullable = true)\n",
+      " |-- Utilities: string (nullable = true)\n",
+      " |-- LotConfig: string (nullable = true)\n",
+      " |-- LandSlope: string (nullable = true)\n",
+      " |-- Neighborhood: string (nullable = true)\n",
+      " |-- Condition1: string (nullable = true)\n",
+      " |-- Condition2: string (nullable = true)\n",
+      " |-- BldgType: string (nullable = true)\n",
+      " |-- HouseStyle: string (nullable = true)\n",
+      " |-- OverallQual: integer (nullable = true)\n",
+      " |-- OverallCond: integer (nullable = true)\n",
+      " |-- YearBuilt: integer (nullable = true)\n",
+      " |-- YearRemodAdd: integer (nullable = true)\n",
+      " |-- RoofStyle: string (nullable = true)\n",
+      " |-- RoofMatl: string (nullable = true)\n",
+      " |-- Exterior1st: string (nullable = true)\n",
+      " |-- Exterior2nd: string (nullable = true)\n",
+      " |-- MasVnrType: string (nullable = true)\n",
+      " |-- MasVnrArea: integer (nullable = true)\n",
+      " |-- ExterQual: string (nullable = true)\n",
+      " |-- ExterCond: string (nullable = true)\n",
+      " |-- Foundation: string (nullable = true)\n",
+      " |-- BsmtQual: string (nullable = true)\n",
+      " |-- BsmtCond: string (nullable = true)\n",
+      " |-- BsmtExposure: string (nullable = true)\n",
+      " |-- BsmtFinType1: string (nullable = true)\n",
+      " |-- BsmtFinSF1: integer (nullable = true)\n",
+      " |-- BsmtFinType2: string (nullable = true)\n",
+      " |-- BsmtFinSF2: integer (nullable = true)\n",
+      " |-- BsmtUnfSF: integer (nullable = true)\n",
+      " |-- TotalBsmtSF: integer (nullable = true)\n",
+      " |-- Heating: string (nullable = true)\n",
+      " |-- HeatingQC: string (nullable = true)\n",
+      " |-- CentralAir: string (nullable = true)\n",
+      " |-- Electrical: string (nullable = true)\n",
+      " |-- 1stFlrSF: integer (nullable = true)\n",
+      " |-- 2ndFlrSF: integer (nullable = true)\n",
+      " |-- LowQualFinSF: integer (nullable = true)\n",
+      " |-- GrLivArea: integer (nullable = true)\n",
+      " |-- BsmtFullBath: integer (nullable = true)\n",
+      " |-- BsmtHalfBath: integer (nullable = true)\n",
+      " |-- FullBath: integer (nullable = true)\n",
+      " |-- HalfBath: integer (nullable = true)\n",
+      " |-- BedroomAbvGr: integer (nullable = true)\n",
+      " |-- KitchenAbvGr: integer (nullable = true)\n",
+      " |-- KitchenQual: string (nullable = true)\n",
+      " |-- TotRmsAbvGrd: integer (nullable = true)\n",
+      " |-- Functional: string (nullable = true)\n",
+      " |-- Fireplaces: integer (nullable = true)\n",
+      " |-- FireplaceQu: string (nullable = true)\n",
+      " |-- GarageType: string (nullable = true)\n",
+      " |-- GarageYrBlt: integer (nullable = true)\n",
+      " |-- GarageFinish: string (nullable = true)\n",
+      " |-- GarageCars: integer (nullable = true)\n",
+      " |-- GarageArea: integer (nullable = true)\n",
+      " |-- GarageQual: string (nullable = true)\n",
+      " |-- GarageCond: string (nullable = true)\n",
+      " |-- PavedDrive: string (nullable = true)\n",
+      " |-- WoodDeckSF: integer (nullable = true)\n",
+      " |-- OpenPorchSF: integer (nullable = true)\n",
+      " |-- EnclosedPorch: integer (nullable = true)\n",
+      " |-- 3SsnPorch: integer (nullable = true)\n",
+      " |-- ScreenPorch: integer (nullable = true)\n",
+      " |-- PoolArea: integer (nullable = true)\n",
+      " |-- PoolQC: string (nullable = true)\n",
+      " |-- Fence: string (nullable = true)\n",
+      " |-- MiscFeature: string (nullable = true)\n",
+      " |-- MiscVal: integer (nullable = true)\n",
+      " |-- MoSold: integer (nullable = true)\n",
+      " |-- YrSold: integer (nullable = true)\n",
+      " |-- SaleType: string (nullable = true)\n",
+      " |-- SaleCondition: string (nullable = true)\n",
+      " |-- SalePrice: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "imputed_train_data.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37\n",
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "cols=imputed_train_data.columns\n",
+    "var_num=[var for var in all_vars if type(imputed_train_data.schema[var].dataType)==IntegerType]\n",
+    "var_categ=[var for var in all_vars if type(imputed_train_data.schema[var].dataType)==StringType]\n",
+    "print(len(var_num))\n",
+    "print(len(var_categ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "indexers=[]\n",
+    "for var in var_categ:\n",
+    "    indexers.append(StringIndexer(inputCol= var, outputCol=var + '_n'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StringIndexer_4101b85305a1e259270f\n",
+      "StringIndexer_41e0a2efc9066da5e143\n",
+      "StringIndexer_4e099d317305d62d261f\n",
+      "StringIndexer_4e6ea0452717b71b2da7\n",
+      "StringIndexer_4591a12f5d89cfe2d0f6\n",
+      "StringIndexer_43018cd3ca4ae1940f2a\n",
+      "StringIndexer_45bc96391c80e98207d2\n",
+      "StringIndexer_4a30b95d5d4eae9cc617\n",
+      "StringIndexer_4306babbbedf2445bc70\n",
+      "StringIndexer_414f8d455a29cf5a9c61\n",
+      "StringIndexer_422b88e957e581942c80\n",
+      "StringIndexer_4081a4bbdc659fcc3d29\n",
+      "StringIndexer_4c9b961dfeb137e4cf8d\n",
+      "StringIndexer_405483e0b541790e6018\n",
+      "StringIndexer_46139d85b3959903a9d7\n",
+      "StringIndexer_48e98489649a16ba7be9\n",
+      "StringIndexer_45088f2887c023adf2be\n",
+      "StringIndexer_40e88270fbf4551be4b3\n",
+      "StringIndexer_463ea3fe1b67fb134bdf\n",
+      "StringIndexer_456281548456e5249ed9\n",
+      "StringIndexer_456c94dd6b301a37dd25\n",
+      "StringIndexer_49cb9c48968fea72deec\n",
+      "StringIndexer_4406a723585ffb8e76af\n",
+      "StringIndexer_45bcb84707a1f5973f07\n",
+      "StringIndexer_4f55a27cd1ac7be8504e\n",
+      "StringIndexer_437eaae8867246adad2a\n",
+      "StringIndexer_4dfb9e35aa3ef72ef6cf\n",
+      "StringIndexer_4299a34ed05d0ba66c6a\n",
+      "StringIndexer_4d2eb2e3b30a7cda297f\n",
+      "StringIndexer_4cb9aff4fa599f571cf3\n",
+      "StringIndexer_462382b695412238cd6d\n",
+      "StringIndexer_4546aac115d84cc225c9\n",
+      "StringIndexer_4e8f986459a45f780e9c\n",
+      "StringIndexer_4ad29abd9bec17042708\n",
+      "StringIndexer_4a7088d80359852369c1\n",
+      "StringIndexer_4cd7a438ceac46f651f5\n",
+      "StringIndexer_4130be0ba5ff9c8ed93b\n",
+      "StringIndexer_4d8488c896d8632d95bc\n",
+      "StringIndexer_46a9a5e31feb42327c6d\n",
+      "StringIndexer_49c493c8410cc4ce23db\n",
+      "StringIndexer_419e93fe94c0a694fa6b\n",
+      "StringIndexer_4a55b02bab1931b1a7eb\n",
+      "StringIndexer_4cc1b3c7d0a39855e30e\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ind in indexers:\n",
+    "    print(ind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(indexers)"
    ]
   },
   {
@@ -3730,6 +4063,28 @@
     "# 6. Selección de variables \n",
     "\n",
     "(correlaciones, importancia de variables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.mllib.stat import Statistics\n",
+    "from pyspark.mllib.linalg import Vectors\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "imputed_train_data_rdd = imputed_train_data.rdd.map(Vectors.dense) ### convertimos a rdd\n",
+    "cols_imputed_train_data = imputed_train_data.columns\n",
+    "\n",
+    "#pearson_corr = Statistics.corr(imputed_train_data_rdd, method=\"pearson\")\n",
+    "#pearson_corr_df = pd.DataFrame(pearson_corr, index=cols_imputed_train_data, columns=cols_imputed_train_data)\n",
+    "#pearson_corr_df"
    ]
   },
   {
@@ -3770,55 +4125,6 @@
     "Se recomienda automatizar procesos mediante el uso de pipelines y creación de funciones para evitar repetir código.\n",
     "\n",
     "La métrica a usar para la evaluación de soluciones es *RMSLE*. Esta métrica no se encuentra dentro de las que ofrece el objeto *RegressionEvaluator* por lo que debemos definir nuestro propio evaluador."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Código original tomado de:\n",
-    "https://gist.github.com/pvalienteverde\n",
-    "\n",
-    "- Se ha añadido la fórmula rmsle para que trabaje con la API DataFrames.\n",
-    "'''\n",
-    "\n",
-    "from pyspark.ml.evaluation import Evaluator\n",
-    "from math import sqrt\n",
-    "from operator import add\n",
-    "from pyspark.sql.functions import avg\n",
-    "from pyspark.sql.functions import log1p\n",
-    "\n",
-    "class MyEvaluator(Evaluator):\n",
-    "    '''\n",
-    "    When a userID is predicted when it is not already trained (all userID  data is used on validation \n",
-    "    group and none of them to train), prediction is nan,  so RegressionEvaluator returns Nan.\n",
-    "    To solve this we must change RegressionEvaluator by MiValidacion\n",
-    "    '''\n",
-    "    def __init__(self,predictionCol='prediction', targetCol='rating'):        \n",
-    "        super(MyEvaluator, self).__init__()\n",
-    "        self.predictionCol=predictionCol\n",
-    "        self.targetCol=targetCol\n",
-    "        \n",
-    "    def _evaluate(self, dataset):       \n",
-    "        error=self.rmse(dataset,self.predictionCol,self.targetCol)\n",
-    "        print (\"Error: {}\".format(error))\n",
-    "        return error\n",
-    "    \n",
-    "    def isLargerBetter(self):\n",
-    "        return False\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def rmse(dataset, predictionCol, targetCol):\n",
-    "        return sqrt(dataset.select(avg((dataset[targetCol] - dataset[predictionCol]) ** 2)).first()[0])\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def rmsle(dataset, predictionCol, targetCol):\n",
-    "        return sqrt(dataset.select(avg((log1p(dataset[targetCol]) - log1p(dataset[predictionCol])) ** 2)).first()[0])             "
    ]
   },
   {
